# dotfiles

./: .alias  .gitattributes  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .vimrc  .zshenv  .zshrc  README.md  Session.vim  df_install.zsh  install.py  install.zsh  packages.json
JetBrains/: README.md
alacritty/: alacritty.yml  color.yml  dark-mode-notifier.swift
dotfile/: README.md  __init__.py  __main__.py  cli.py
dots/: compile.sh  package-lock.json  package.json
gh/: README.md  config.yml  hosts.yml
git/: .gitconfig  config  config.personal  config.work  git.alias.zsh  gitconfig-personal  ignore
ideavim/: ideavimrc
iterm2/: OneHalf Colours.json  com.googlecode.iterm2.plist
neovim/: init.lua  plugins.vim  style.vim
nvim/: config.vim  init.lua  (+3 more)
santree/: README.md  __init__.py  cli.py  compile.sh  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
santree/commands/: __init__.py  create.py  list.py  remove.py  setup.py  switch.py
santree/core/: __init__.py  config.py  git.py  script_runner.py
santree/source/: cli.tsx
santree/source/commands/: clean.tsx  commit.tsx  create.tsx  list.tsx  pr.tsx  remove.tsx  setup.tsx  switch.tsx  sync.tsx  work.tsx
santree/source/lib/: git.ts  github.ts  linear.ts
santree/src/: __main__.py  cli.py
santree/src/commands/: __init__.py  clean.py  commit.py  create.py  list.py  pr.py  remove.py  setup.py  switch.py  sync.py  work.py
santree/src/core/: __init__.py  colors.py  config.py  git.py  linear.py  script_runner.py
santree/src/templates/: fix-pr.j2  implement.j2  plan.j2  review.j2
(+182 files in other folders)
